--- a/internfair/templates/home.html
+++ b/internfair/templates/home.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="{% static 'css/home.css' %}">
+	<link rel="stylesheet" href="../static/css/home.css">
 
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -17,7 +18,25 @@
 	</style>
 	<title>INTERN FAIR</title>
 </head>
+<style>
+	.card.c{
 
+		height: 40vh !important;
+	}
+	.card-col{
+		height: 100% !important;
+	}
+	@media screen and (max-width: 600px) {
+		.card.c{
+			height: 100% !important;
+		}
+		.card-col{
+			height: 100% !important;
+		}
+
+		
+	}
+</style>
 <body>
 	<div>
 	<nav class="navbar navbar-edit navbar-expand-lg navbar-light bg-light" style="padding: 0.5vh 5vw; box-shadow: 0px 2px 8px rgba(72, 74, 82, 0.08); background-color: #FFFFFF !important">
@@ -679,27 +698,24 @@
 	
 
 	<div class="card-deck row justify-content-between" >
-		<div class="col-12 col-lg-4 col-md-6  py-3 py-sm-0 col" style="height: 100% !important;">
+		<div class="col-12 col-lg-4 col-md-6  py-3 py-sm-0 col card-col"  >
 			<div class="card c">
 				<img class="card-img-top i" src="{% static 'image/FakeJanvi.jpg' %}" alt="Card image">
-
-			
-				
 				<br>
-			<div class="card-body">
-				<br>
-				<h3 class="card-title cardtext"><b>Sriya Poluri</b></h3>
-				
-				<h4 class="card-title cardtext"><b>Department of chaplusi</b></h4>
-				<br>
-				<p class="card-text cardtext">Overall, it was an amazing experience. Mentors helped me make my first CV and attend the interviews. The intern was in R&D... I had to browse the net and find any related articles regarding the topic given and sometimes simplify the given articles and make short notes on them. I really did improve some skills through the intern.
-				</p><br>
-				
+				<div class="card-body">
+					<br>
+					<h3 class="card-title cardtext"><b>Sriya Poluri</b></h3>
+					
+					<h4 class="card-title cardtext"><b>Department of chaplusi</b></h4>
+					<br>
+					<p class="card-text cardtext">Overall, it was an amazing experience. Mentors helped me make my first CV and attend the interviews. The intern was in R&D... I had to browse the net and find any related articles regarding the topic given and sometimes simplify the given articles and make short notes on them. I really did improve some skills through the intern.
+					</p>
+					<br>
+					
+				</div>
 			</div>
-
 		</div>
-		</div>
-		<div class="col-12 col-lg-4 col-md-6  py-3 py-sm-0 col" style="height: 100% !important;">
+		<div class="col-12 col-lg-4 col-md-6  py-3 py-sm-0 col card-col"  >
 			<div class="card c">
 				<img class="card-img-top i" src="{% static 'image/FakeJanvi.jpg' %}" alt="Card image">
 			
@@ -719,7 +735,7 @@
 
 		</div>
 		</div>
-		<div class="col-12 col-lg-4 col-md-6  py-3 py-sm-0 col" style="height: 100% !important;">
+		<div class="col-12 col-lg-4 col-md-6  py-3 py-sm-0 col card-col"  >
 		<div class="card c">
 
 			<img class="card-img-top i" src="{% static 'image/FakeJanvi.jpg' %}" alt="Card image">
@@ -744,7 +760,7 @@
 		
 	</div>
 	<div class="card-deck row justify-content-between more-tests" id="more-tests" >
-		<div class="col-12 col-lg-4 col-md-6  py-3 py-sm-0 col" style="height: 100% !important;">
+		<div class="col-12 col-lg-4 col-md-6  py-3 py-sm-0 col card-col"  >
 			<div class="card c">
 				<img class="card-img-top i" src="{% static 'image/FakeJanvi.jpg' %}" alt="Card image">
 			
@@ -763,7 +779,7 @@
 
 		</div>
 		</div>
-		<div class="col-12 col-lg-4 col-md-6  py-3 py-sm-0 col" style="height: 100% !important;">
+		<div class="col-12 col-lg-4 col-md-6  py-3 py-sm-0 col card-col"  >
 		<div class="card c">
 			<img class="card-img-top i" src="{% static 'image/FakeJanvi.jpg' %}" alt="Card image">
 		
@@ -783,7 +799,7 @@
 
 	</div>
 		</div>
-		<div class="col-12 col-lg-4 col-md-6  py-3 py-sm-0 col" style="height: 100% !important;">
+		<div class="col-12 col-lg-4 col-md-6  py-3 py-sm-0 col card-col"  >
 			<div class="card c">
 				<img class="card-img-top i" src="{% static 'image/FakeJanvi.jpg' %}" alt="Card image">
 			
