--- a/internfair/templates/home.html
+++ b/internfair/templates/home.html
@@ -5,7 +5,11 @@
 	<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="{% static 'css/home.css' %}">
-	<link rel="stylesheet" href="../static/css/home.css">
+	<!-- <link rel="stylesheet" href="../static/css/home.css"> -->
+
+
+	<!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -18,25 +22,7 @@
 	</style>
 	<title>INTERN FAIR</title>
 </head>
-<style>
-	.card.c{
 
-		height: 40vh !important;
-	}
-	.card-col{
-		height: 100% !important;
-	}
-	@media screen and (max-width: 600px) {
-		.card.c{
-			height: 100% !important;
-		}
-		.card-col{
-			height: 100% !important;
-		}
-
-		
-	}
-</style>
 <body>
 	<div>
 	<nav class="navbar navbar-edit navbar-expand-lg navbar-light bg-light" style="padding: 0.5vh 5vw; box-shadow: 0px 2px 8px rgba(72, 74, 82, 0.08); background-color: #FFFFFF !important">
@@ -683,6 +669,109 @@
   </div>
 </section>
 
+
+<section style="padding: 5vh 5vw">
+	<div class="title">
+		<h1><b id="testimonials">Testimonials</b></h1>
+	</div>
+	<br><br><br>
+
+	
+	
+	<div class=" row justify-content-between">
+		<div class="col-12 col-md-3 col-lg-3 card-div" style=" background: #416EA8;border-radius: 8px;">
+			<div class="card">
+				<!-- <img src="../static/image/FakeJanvi.jpg" class="card-img-top" alt="..."> -->
+				<img src="{% static 'image/FakeJanvi.jpg">
+				<div class="card-body">
+				  <h3 class="card-title"><b>Sriya Poluri</b></h3>
+					<h4><b>Department of chaplusi</b></h4>
+				  <p class="card-text">Overall, it was an amazing experience. Mentors helped me make my first CV and attend the interviews. The intern was in R&D... I had to browse the net and find any related articles regarding the topic given and sometimes simplify the given articles and make short notes on them. I really did improve some skills through the intern.</p>
+				  
+				</div>
+			  </div>
+		</div>
+		<div class="col-12 col-md-3 col-lg-3 card-div" style=" background: #416EA8;border-radius: 8px;">
+			<div class="card">
+				<!-- <img src="../static/image/FakeJanvi.jpg" class="card-img-top" alt="..."> -->
+				<img src="{% static 'image/FakeJanvi.jpg">
+				<div class="card-body">
+					<h3 class="card-title"><b>Atharva Tagalpallewar</b></h3>
+					<h4><b>Department of chaplusi</b></h4>
+				  <p class="card-text">It was a good experience overall. I got to know how work is done actually in startups and new companies.</p>
+				  
+				</div>
+			  </div>
+		</div>
+		<div class="col-12 col-md-3 col-lg-3 card-div" style=" background: #416EA8;border-radius: 8px;">
+			<div class="card">
+				<!-- <img src="../static/image/FakeJanvi.jpg" class="card-img-top" alt="..."> -->
+				<img src="{% static 'image/FakeJanvi.jpg">
+				<div class="card-body">
+					<h3 class="card-title"><b>Manish Prajapati</b></h3>
+					<h4><b>Department of chaplusi</b></h4>
+				  <p class="card-text">The experience was great, first time working with a startup on completely new technologies was awesome. The benefit was the stipend :-) and the knowledge that I gained.</p>
+				  
+				</div>
+			  </div>
+		</div>
+
+	</div>
+	<br><br>
+	<br>
+	
+	<div class=" row justify-content-between more-tests" id="more-tests" >
+		<div class="col-12 col-md-3 col-lg-3 card-div" style=" background: #416EA8;border-radius: 8px;">
+			<div class="card">
+				<!-- <img src="../static/image/FakeJanvi.jpg" class="card-img-top" alt="..."> -->
+				<img src="{% static 'image/FakeJanvi.jpg">
+				<div class="card-body">
+				  <h3 class="card-title"><b>Sriya Poluri</b></h3>
+					<h4><b>Department of chaplusi</b></h4>
+				  <p class="card-text">Overall, it was an amazing experience. Mentors helped me make my first CV and attend the interviews. The intern was in R&D... I had to browse the net and find any related articles regarding the topic given and sometimes simplify the given articles and make short notes on them. I really did improve some skills through the intern.</p>
+				  
+				</div>
+			  </div>
+		</div>
+		<div class="col-12 col-md-3 col-lg-3 card-div" style=" background: #416EA8;border-radius: 8px;">
+			<div class="card">
+				<!-- <img src="../static/image/FakeJanvi.jpg" class="card-img-top" alt="..."> -->
+				<img src="{% static 'image/FakeJanvi.jpg">
+				<div class="card-body">
+					<h3 class="card-title"><b>Atharva Tagalpallewar</b></h3>
+					<h4><b>Department of chaplusi</b></h4>
+				  <p class="card-text">It was a good experience overall. I got to know how work is done actually in startups and new companies.</p>
+				  
+				</div>
+			  </div>
+		</div>
+		<div class="col-12 col-md-3 col-lg-3 card-div" style=" background: #416EA8;border-radius: 8px;">
+			<div class="card">
+				<!-- <img src="../static/image/FakeJanvi.jpg" class="card-img-top" alt="..."> -->
+				<img src="{% static 'image/FakeJanvi.jpg">
+				<div class="card-body">
+					<h3 class="card-title"><b>Manish Prajapati</b></h3>
+					<h4><b>Department of chaplusi</b></h4>
+				  <p class="card-text">The experience was great, first time working with a startup on completely new technologies was awesome. The benefit was the stipend :-) and the knowledge that I gained.</p>
+				  
+				</div>
+			  </div>
+		</div>
+
+	</div>
+	<br><br>
+	<br>
+	
+
+	<div class="more-test-div text-right">
+		<button type="button" class="btn btn-info" id="show-more-tests" style="color:white;" onclick="moreTests()">
+			Show more <i class="fas fa-chevron-down"></i>
+		</button>
+	</div>
+	
+
+</section>
+<!-- 
 <section >
 	<div style="padding-left:5vw; padding-right:5vw; font-family: GT Walsheim Pro;" >
 		<br>
@@ -701,6 +790,8 @@
 		<div class="col-12 col-lg-4 col-md-6  py-3 py-sm-0 col card-col"  >
 			<div class="card c">
 				<img class="card-img-top i" src="{% static 'image/FakeJanvi.jpg' %}" alt="Card image">
+				<img class="card-img-top i" src="../static/image/FakeJanvi.jpg" alt="Card image">
+
 				<br>
 				<div class="card-body">
 					<br>
@@ -718,6 +809,7 @@
 		<div class="col-12 col-lg-4 col-md-6  py-3 py-sm-0 col card-col"  >
 			<div class="card c">
 				<img class="card-img-top i" src="{% static 'image/FakeJanvi.jpg' %}" alt="Card image">
+				<img class="card-img-top i" src="../static/image/FakeJanvi.jpg" alt="Card image">
 			
 				
 				<br>
@@ -739,6 +831,7 @@
 		<div class="card c">
 
 			<img class="card-img-top i" src="{% static 'image/FakeJanvi.jpg' %}" alt="Card image">
+			<img class="card-img-top i" src="../static/image/FakeJanvi.jpg" alt="Card image">
 		
 			
 			<br>
@@ -759,10 +852,11 @@
 
 		
 	</div>
-	<div class="card-deck row justify-content-between more-tests" id="more-tests" >
+	<div class="card-deck row justify-content-between more-tests" >
 		<div class="col-12 col-lg-4 col-md-6  py-3 py-sm-0 col card-col"  >
 			<div class="card c">
 				<img class="card-img-top i" src="{% static 'image/FakeJanvi.jpg' %}" alt="Card image">
+				<img class="card-img-top i" src="../static/image/FakeJanvi.jpg" alt="Card image">
 			
 				
 				<br>
@@ -780,59 +874,56 @@
 		</div>
 		</div>
 		<div class="col-12 col-lg-4 col-md-6  py-3 py-sm-0 col card-col"  >
-		<div class="card c">
-			<img class="card-img-top i" src="{% static 'image/FakeJanvi.jpg' %}" alt="Card image">
-		
+			<div class="card c">
+				<img class="card-img-top i" src="{% static 'image/FakeJanvi.jpg' %}" alt="Card image">
+				<img class="card-img-top i" src="../static/image/FakeJanvi.jpg" alt="Card image">
 			
-			<br>
-		<div class="card-body">
-			<br>
-			<h3 class="card-title cardtext"><b>Atharva Tagalpallewar
-			</b></h3>
-			
-			<h4 class="card-title cardtext"><b>Department of chaplusi</b></h4>
-			<br>
-			<p class="card-text cardtext">It was a good experience overall. I got to know how work is done actually in startups and new companies.
-			</p><br>
-			
-		</div>
+				
+				<br>
+				<div class="card-body">
+					<br>
+					<h3 class="card-title cardtext"><b>Atharva Tagalpallewar
+					</b></h3>
+					
+					<h4 class="card-title cardtext"><b>Department of chaplusi</b></h4>
+					<br>
+					<p class="card-text cardtext">It was a good experience overall. I got to know how work is done actually in startups and new companies.
+					</p><br>
+						
+				</div>
 
-	</div>
+			</div>
 		</div>
 		<div class="col-12 col-lg-4 col-md-6  py-3 py-sm-0 col card-col"  >
 			<div class="card c">
 				<img class="card-img-top i" src="{% static 'image/FakeJanvi.jpg' %}" alt="Card image">
+				<img class="card-img-top i" src="../static/image/FakeJanvi.jpg" alt="Card image">
 			
 				
 				<br>
-			<div class="card-body">
-				<br>
-				<h3 class="card-title cardtext"><b>Manish Prajapati</b></h3>
-				
-				<h4 class="card-title cardtext"><b>Department of chaplusi</b></h4>
-				<br>
-				<p class="card-text cardtext">The experience was great, first time working with a startup on completely new technologies was awesome. The benefit was the stipend :-) and the knowledge that I gained.
-				</p><br>
-				
-			</div>
+				<div class="card-body">
+					<br>
+					<h3 class="card-title cardtext"><b>Manish Prajapati</b></h3>
+					
+					<h4 class="card-title cardtext"><b>Department of chaplusi</b></h4>
+					<br>
+					<p class="card-text cardtext">The experience was great, first time working with a startup on completely new technologies was awesome. The benefit was the stipend :-) and the knowledge that I gained.
+					</p><br>
+					
+				</div>
 
-		</div>
+			</div>
 		</div>
 
 		
 	</div>
 
-	<div class="more-test-div text-right">
-		<button id="show-more-tests" style="color:#00b0e0;" onclick="moreTests()">
-			show more <i class="fas fa-chevron-down" style=""></i>
-		</button>
-	</div>
 
 
 	</div>
 </section>  		
              
-
+ -->
 <section  class="flex justify-content-center" id="CVBlogs">
  	<br>
 	<br>
@@ -1374,6 +1465,7 @@
  <div class="col-12 col-lg-4 col-md-6  py-3 py-sm-0 col" >
     <div class="card c">
     	<img class="card-img-top i" src="{% static 'image/FakeJanvi.jpg' %}" alt="Card image">
+		<img class="card-img-top i" src="../static/image/FakeJanvi.jpg" alt="Card image">
      
      	
      	<br>
@@ -1402,6 +1494,7 @@
 <div class="col-12 col-lg-4 col-md-6  py-3 py-sm-0 col" >
     <div class="card c">
     	<img class="card-img-top i" src="{% static 'image/FakeJanvi.jpg' %}" alt="Card image">
+		<img class="card-img-top i" src="../static/image/FakeJanvi.jpg" alt="Card image">
      
      	
      	<br>
@@ -1430,6 +1523,7 @@
 <div class="col-12 col-lg-4 col-md-6  py-3 py-sm-0 col" >
     <div class="card c">
     	<img class="card-img-top i" src="{% static 'image/FakeJanvi.jpg' %}" alt="Card image">
+		<img class="card-img-top i" src="../static/image/FakeJanvi.jpg" alt="Card image">
      
      	
      	<br>
@@ -1470,6 +1564,10 @@
 	<br>
 </section>
 
+ <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+ <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+
 <script>
 	function moreTests() {
 		let show = document.getElementsByClassName('more-tests');
@@ -1487,7 +1585,7 @@
 			console.log(element);
 			if (str.includes('down')) {
 				// console.log('yes');
-				element.style.display = 'block';
+				element.style.display = 'flex';
 				toggle.innerHTML = `<a href="#tests-collapse" style="font-size:16px; align-items:center;">show less <i class="fas fa-chevron-up" style="color:#00b0e0;"></i></a>`;
 			} else {
 				let target = document.getElementById('tests-collapse');
