--- a/internfair/templates/StudentProfile1.html
+++ b/internfair/templates/StudentProfile1.html
@@ -240,7 +240,7 @@
        <div class="col-3 col-md-auto  padding pt-2 mx-3 m-md-0">
 <!--          <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAAA1BMVEVBaeG1ENgtAAAASElEQVR4nO3BgQAAAADDoPlTX+AIVQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADwDcaiAAFXD1ujAAAAAElFTkSuQmCC"-->
 <!--            class="img-fluid">-->
-                    <img width="25" class='entry-logo' src="{{intern.Internship.startup.logo.url}}"></img>
+<svg data-jdenticon-value="{{ intern.Internship.startup.id }}" width="25" height="25"></svg>
 
 
 
@@ -262,7 +262,7 @@
         <div class="summaryCard" style="margin:auto;">
             <div class="row">
                 <div class="col-3">
-                      <img width="80" height="80" src="{{intern.Internship.startup.logo.url}}"></img>
+                  <svg data-jdenticon-value="{{ intern.Internship.startup.id }}" width="60" height="60"></svg>
                 </div>
             </div>
             <div class="row" style="padding-top: 10px; padding-bottom: 3px;">
