--- a/recruiter/templates/recruiter/base1.html
+++ b/recruiter/templates/recruiter/base1.html
@@ -55,7 +55,7 @@
   <div class="container">
     <div class="row" style="margin-top: 6rem;">
       <div class="col-12 col-md-2 d-flex justify-content-center align-items-center">
-      <img src="{{startup.logo.url}}" width="80">
+        <svg data-jdenticon-value="{{startup.id}}" width="80" height="80"></svg>
       </div>
     <div class="col-md-4 pb-3 pb-md-0">
       <h1 id="company-name">{{startup.companyName}}</h1>
@@ -97,16 +97,16 @@
                     <div class="prelim mx-auto">
                      <div class="pb-3 pl-3 pt-2 mx-auto logoedit" style="max-width:30%;">
 <!--                        <img src="{% static 'image/p.png' %}" class="rounded-circle img-fluid" alt="">-->
-                            <img src="{{startup.logo.url}}" width="80">
+<svg data-jdenticon-value="{{startup.id}}" width="80" height="80"></svg>
                             <br><br><br>
                      </div>
                       <div class='row justify-content-center'>
 
-                      <div class='col-7 text-center'>
+                      <!-- <div class='col-7 text-center'>
                         <input type="file" accept="image/*" id="myFile" class='changelogoinput' name="startup_logo" style='max-width:100%;position:absolute; z-index:100; '>
                         <div style='width:100%;' class='changelogo submit'>Change Startup Logo</div>
                         <small style='color:red'>Save changes to view updated logo.</small>
-                      </div>
+                      </div> -->
                       </div>
                 </div>
                     <label for="question1" class="question" >COMPANY NAME</label>
