--- a/internfair/templates/StudentRegistration.html
+++ b/internfair/templates/StudentRegistration.html
@@ -65,12 +65,19 @@
 
       {% endif %}
       <div>
-        <button type="submit" class="btn btn-primary btn-lg btn-block regn">Register</button>
+        <button type="submit" class="btn btn-primary btn-lg btn-block regn" id="#form_submit">Register</button>
       </div>
       <br>
   </form>
   <div class="student"><a class="intern" href="{% url 'recruiter:RecruiterRegistration' %}"> I am a recruiter</a></div>
 <br><br>
+
+<script>
+  $('#form_submit').click(function(event) {
+  if(!event.detail || event.detail == 1){ return true; }
+  else { return false; }
+});
+</script>
 
 </body>
 
