--- a/internfair/templates/AvailableInternships.html
+++ b/internfair/templates/AvailableInternships.html
@@ -5,6 +5,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.19.1/dist/bootstrap-table.min.css">
@@ -61,7 +64,7 @@
       </div>
     </div>
     <div class="col-12" style="padding: 30px !important;">
-<table id="table" style="border: none !important; padding: 10px !important;" data-toggle="table"  data-search="true" data-pagination="true" data-filter-control="true" data-show-export="false" data-click-to-select="true" data-toolbar="#toolbar" class="table table-hover">
+<table id="table" data-page-size="20" style="border: none !important; padding: 10px !important;" data-toggle="table"  data-search="true" data-pagination="true" data-filter-control="true" data-show-export="false" data-click-to-select="true" data-toolbar="#toolbar" class="table table-hover">
       <thead>
         <tr style="border-bottom: 1px solid #B6B6B6; padding: 10px !important;">
           <!-- <th style="border: none !important; padding: 10px !important;" data-field="state" data-checkbox="true"></th> -->
@@ -75,6 +78,101 @@
       <tbody>
         <!-- First row -->
         {% for intern in interns %}
+        <tr style="border-bottom: 1px solid #B6B6B6; padding: 10px !important;" class='internshipRow' id="{{intern.id}}" onclick="openApplyModal('{{intern.id}}')">
+          <td style="border: none !important; padding: 10px !important;"><svg data-jdenticon-value="{{intern.id}}" width="25" height="25"></svg></td>
+          <td style="border: none !important; padding: 10px !important;">{{ intern.startup.companyName }}</td>
+          <td style="border: none !important; padding: 10px !important;">{{ intern.profile }}</td>
+          <td style="border: none !important; padding: 10px !important;">{{ intern.location }}</td>
+          <td style="border: none !important; padding: 10px !important;">{{ intern.stipend }}</td>
+
+          {% comment %} Apply to company modal {% endcomment %}
+          <div class="applyToCompany" id="modal{{intern.id}}">
+          <div class="applyCard" style="margin:auto;">
+            <div class="row justify-content-center">
+              <div class="col-12">
+                <svg data-jdenticon-value="{{intern.id}}" width="60" height="60"></svg>
+              </div>
+            </div>
+            <div class="row" style="padding-top: 10px; padding-bottom: 3px;">
+              <div class="col-12 c-name">
+                {{ intern.startup.companyName }}
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-6 text-left entry">
+                <small>PROFILE</small><br>
+                <span class="info">{{ intern.profile }}</span>
+              </div>
+              <div class="col-6 text-left entry">
+                <small>ALLOWANCES</small><br>
+                <span class="info">{{ intern.allowances }}</span>
+              </div>
+              <div class="col-6 text-left entry">
+                <small>LOCATION</small><br>
+                <span class="info">{{ intern.location }}</span>
+              </div>
+              <div class="col-6 text-left entry">
+                <small>REMARKS</small><br>
+                <span class="info">{{ intern.remarks }}</span>
+              </div>
+              <div class="col-6 text-left entry">
+                <small>STIPEND</small><br>
+                <span class="info">{{ intern.stipend}}</span>
+              </div>
+
+
+
+            </div>
+            <div class="row" style="padding-top: 10px; padding-bottom:30px">
+              <div class="col-12 text-center">
+                <button type="button" onclick="openQuestionModal({{intern.id}})" class="apply">Apply</button>
+              </div>
+            </div>
+          </div>
+          </div>
+
+          <!-- Question Modal -->
+          <div class="questionModal" id="qModal{{intern.id}}">
+        <div class="quesCard" style="margin:auto ; height:fit-content; top: 55%">
+          <div style="padding: 5%;">
+            <div style="text-align: center;">
+              <span class="heading">Internship Form</span><br><br>
+            </div>
+
+            <span class="sub-heading">Question for preliminary interview</span>
+            <form action="" method="POST">
+              {% csrf_token %}
+              <br>
+              <!--              <span class="Qheading">{{ intern.questions }}</span>-->
+              <!--              <input type="text" class="input" name="questions">-->
+              <!--              <br><br>-->
+              <input type="hidden" name="startup" value='{{ intern.startup }}'>
+              <input type="hidden" name="profile" value="{{ intern.profile }}">
+              <input type="hidden" name="id" value="{{ intern.id }}">
+              <span class="">Link to CV (<a href="https://docs.google.com/document/d/1L85vVa1wAue7HdsMQN8cly-bmy1ZFoaaUdnA4Sl-qv8/edit?usp=sharing" style="color: #416EA8" target="_blank">How to get a shareable link.</a>) </span>
+              <input type="url" required name="CV" class="input"><br><br>
+              {% for ques in intern.string_as_list  %}
+              {% if ques != "" %}
+              <span class="">{{ ques }}</span>
+              <input type="text" name="answers" required class="input">
+              {% endif %}
+              <br><br>
+              {% endfor %}
+              
+              
+              
+              <br>
+              <div class="row align-items-center ">
+                <div class="col-5 text-right"><a class="back" onclick="backModal({{intern.id}})">Back</a></div>
+                <!--              <div class="col-7 text-left"><button class="Publish" onclick="submitApplication(1)">Submit</button></div>-->
+                <div class="col-7 text-left"><button class="Publish">Submit</button></div>
+              </div>
+            </form>
+          </div>
+        </div>
+
+          </div>
+        </tr>
         <tr style="border-bottom: 1px solid #B6B6B6; padding: 10px !important;" class='internshipRow' id="{{intern.id}}" onclick="openApplyModal('{{intern.id}}')">
           <td style="border: none !important; padding: 10px !important;"><svg data-jdenticon-value="{{intern.id}}" width="25" height="25"></svg></td>
           <td style="border: none !important; padding: 10px !important;">{{ intern.startup.companyName }}</td>
