--- a/internfair/templates/AvailableInternships.html
+++ b/internfair/templates/AvailableInternships.html
@@ -40,7 +40,7 @@
             <a class="nav-link activo activa hov" href="#" style="color: #416EA8;">Available Internship</a>
           </li>
           <li class="nav-item active ">
-            <a class="nav-link hov" href="{% url 'contact' %} " target="_blank">Contact Us</a>
+            <a class="nav-link hov" href="/#ContactUs " target="_blank">Contact Us</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link activa hov" href="{% url 'StudentLogout' %}" style="color: #416EA8;">Log Out</a>
