--- a/internfair/templates/ForgotPassword.html
+++ b/internfair/templates/ForgotPassword.html
@@ -63,7 +63,7 @@
                 <a href="{% url 'index' %}" class="nav-menu" style="margin-right: 8vw;">Home</a>
             </li>
             <li class="menu-item">
-                <a href="{% url 'contact' %}" target="_blank" class="nav-menu">Contact Us</a>
+                <a href="/#ContactUs" target="_blank" class="nav-menu">Contact Us</a>
             </li>
           </ul>
           <a href="{% url 'StudentRegistration' %}"><button class="RegisterBtn">Register</button></a>
