--- a/internfair/templates/StudentProfile1.html
+++ b/internfair/templates/StudentProfile1.html
@@ -37,7 +37,7 @@
             <a class="nav-link hov" href="{% url 'AvailableInternships' %}">Available Internship </a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="{% url 'contact' %}" target="_blank">Contact Us</a>
+            <a class="nav-link" href="/#ContactUs" target="_blank">Contact Us</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href=" {% url 'StudentLogout' %}" style="color: #416EA8;">Log Out</a>
