--- a/internfair/templates/contact.html
+++ b/internfair/templates/contact.html
@@ -26,7 +26,7 @@
                 <a href="{% url 'index' %}" class="nav-menu" style="margin-right: 8vw;">Home</a>
             </li>
             <li class="menu-item">
-                <a  href="{% url 'contact' %}" class="nav-menu activa">Contact Us</a>
+                <a  href="/#ContactUs" class="nav-menu activa">Contact Us</a>
             </li>
           </ul>
         </div>
