--- a/internfair/templates/team.html
+++ b/internfair/templates/team.html
@@ -25,7 +25,7 @@
                     <a href="{% url 'index' %}" class="nav-menu" style="margin-right: 8vw;">Home</a>
                 </li>
                 <li class="menu-item">
-                    <a  href="{% url 'contact' %}" target="_blank" class="nav-menu activa">Contact Us</a>
+                    <a  href="/#ContactUs" target="_blank" class="nav-menu activa">Contact Us</a>
                 </li>
               </ul>          
             </div>
