--- a/recruiter/templates/recruiter/RecruiterLanding.html
+++ b/recruiter/templates/recruiter/RecruiterLanding.html
@@ -25,7 +25,7 @@
                 <a href="{% url 'index' %}" class="nav-menu" style="margin-right: 8vw;">Home</a>
             </li>
             <li class="menu-item">
-                <a href="{% url 'contact' %}" class="nav-menu" target="_blank">Contact Us</a>
+                <a href="/#ContactUs" class="nav-menu" target="_blank">Contact Us</a>
             </li>
           </ul>
           <a href="{% url 'recruiter:RecruiterRegistration' %}"><button class="RegisterBtn">Register</button></a>
