--- a/recruiter/templates/recruiter/RecruiterLanding.html
+++ b/recruiter/templates/recruiter/RecruiterLanding.html
@@ -74,7 +74,7 @@
 
 
             </div>
-            <div class="col-lg-7 order-lg-2 order-md-2 order-1 text-center col-md-6 col-19 " style=" margin-top: -12rem;" id="intro"  >
+            <div class="col-lg-7 order-lg-2 order-md-2 order-1 text-center col-md-6 col-19 " id="intro"  >
                 <img class="sideImg" src="{% static 'image/sideImg.svg' %}" alt="">
 
             </div>
