--- a/internfair/templates/StudentLanding.html
+++ b/internfair/templates/StudentLanding.html
@@ -39,7 +39,8 @@
         <div class="row justify-content-center align-items-center" style="margin-top:5vh">
             <div class="col-lg-5 order-lg-1 order-md-1 order-12 col-md-6 col-10 temp" style="padding-left:10vw;">
                 <span class="heading">Your first step to excel in your career</span>
-                
+                <br><br>
+                <span class="quote">For more information <a target="_blank" href='https://rebrand.ly/IF22_Guide'>visit here</a></span>
                 <br><br><br>
                 <div class='form' style="width: 80%;">
                     <div class="row justify-content-end">
