--- a/internfair/templates/StudentProfile1.html
+++ b/internfair/templates/StudentProfile1.html
@@ -309,7 +309,7 @@
             </div>
             <div class="row" style="padding-top: 10px; padding-bottom:30px">
                 <div class="col-12 text-center">
-                  <button type="button" onclick="openConfirmModal({{intern.id}})" class="cancel">Cancel Application</button>
+                  <button type="button" class="cancel" style="background-color: red" disabled>Cancellation Not Allowed</button>
                 </div>
             </div>
         </div>
@@ -392,17 +392,6 @@
     }
   }
 
-  function openConfirmModal(i) {
-    var modal = document.getElementById("modal" + i);
-    modal.style.display = "none";
-    modal = document.getElementById("cModal" + i);
-    modal.style.display = "block";
-    window.onclick = function (event) {
-      if (event.target == modal) {
-        modal.style.display = "none";
-      }
-    }
-  }
 
   function backModal(i) {
     var modal = document.getElementById("cModal" + i);
@@ -481,17 +470,6 @@ $(document).ready(function() {
     }
   }
 
-  function openConfirmModal(i) {
-    var modal = document.getElementById("modal" + i);
-    modal.style.display = "none";
-    modal = document.getElementById("cModal" + i);
-    modal.style.display = "block";
-    window.onclick = function (event) {
-      if (event.target == modal) {
-        modal.style.display = "none";
-      }
-    }
-  }
 
   function backModal(i) {
     var modal = document.getElementById("cModal" + i);
